# 42_RTv1

./: CMakeLists.txt  Makefile  README.md  RTv1  author  cone_trash.c  threadstrash.c
include/: rtv1.h
libft/: Makefile  ft_atoi.c  ft_strlen.c
scenes/: all.1  cone.1  cylinder.1  demo.1  demo.2  demo.3  demo.4  plane.1  plane.2  sphere.1  sphere.2  sphere1.1  sphere_cone.1  sphere_plane.1
srcs/: main.c
srcs/error/: error.c
srcs/figur/: disc.c  norm.c
srcs/init/: camera_init.c  figur_and_light.c  init.c
srcs/light/: color.c  light.c  shadow_and_specular.c
srcs/main/: main.c
srcs/parse/: parse.c
srcs/parser/: camera.c  read_file.c  set_lights.c  sphere_cam_light.c  sphere_camera.c
srcs/render/: drow.c  reander.c
srcs/rotation/: qneon.c  rotate.c
srcs/utils/: utils.c
srcs/vectors/: vec_multiply.c  vector_sec.c  vectors.c
