cmake_minimum_required(VERSION 3.16)
project(RTv1 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(minilibx)

add_executable(RTv1
        include/libft.h
        include/rtv1.h
        libft/ft_alpdown.c
        libft/ft_alpup.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_cu_wards.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnelem.c
        libft/ft_lstnew.c
        libft/ft_matcp.c
        libft/ft_matdel.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putmat.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoinfree.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        minilibx/test/main.c
        minilibx/test/new_win.c
        minilibx/mlx.h
        minilibx/mlx_clear_window.c
        minilibx/mlx_destroy_image.c
        minilibx/mlx_destroy_window.c
        minilibx/mlx_expose_hook.c
        minilibx/mlx_flush_event.c
        minilibx/mlx_get_color_value.c
        minilibx/mlx_get_data_addr.c
        minilibx/mlx_hook.c
        minilibx/mlx_init.c
        minilibx/mlx_int.h
        minilibx/mlx_int_anti_resize_win.c
        minilibx/mlx_int_do_nothing.c
        minilibx/mlx_int_get_visual.c
        minilibx/mlx_int_param_event.c
        minilibx/mlx_int_set_win_event_mask.c
        minilibx/mlx_int_str_to_wordtab.c
        minilibx/mlx_int_wait_first_expose.c
        minilibx/mlx_key_hook.c
        minilibx/mlx_lib_xpm.c
        minilibx/mlx_loop.c
        minilibx/mlx_loop_hook.c
        minilibx/mlx_mouse_hook.c
        minilibx/mlx_new_image.c
        minilibx/mlx_new_window.c
        minilibx/mlx_pixel_put.c
        minilibx/mlx_put_image_to_window.c
        minilibx/mlx_rgb.c
        minilibx/mlx_string_put.c
        minilibx/mlx_xpm.c
        srcs/error/error.c
        srcs/init/camera_init.c
        srcs/init/init.c
        srcs/main/main.c
        srcs/render/drow.c
        srcs/render/reander.c
        srcs/vectors/vec_multiply.c
        srcs/vectors/vectors.c)
